--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^12.25.0",
     "next": "16.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
