--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "^12.25.0",
     "next": "16.1.1",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
