--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.9.0",
     "clsx": "^1.2.1",
     "framer-motion": "^12.25.0",
+    "mathjs": "^15.1.0",
     "next": "16.1.1",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
