--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.9.0",
+    "@gsap/react": "^2.1.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
     "framer-motion": "^12.25.0",
+    "gsap": "^3.14.2",
+    "lucide-react": "^0.562.0",
     "mathjs": "^15.1.0",
     "next": "16.1.1",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
