--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "mathjs": "^15.1.0",
+    "motion": "^12.26.2",
     "next": "16.1.1",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
